--- a/Tasky/app/src/main/res/values/colors.xml
+++ b/Tasky/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="text">#8e8a8a</color>
+    <color name="colorPrimary">#f5e8ba</color>
+    <color name="colorPrimaryDark">#dc9730</color>
+    <color name="colorAccent">#993e282f</color>
+    <color name="text">#FFFFFF</color>
+    <color name="bAdd">#99000000</color>
 </resources>
